--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
+    "set-tz": "^0.2.0",
     "twig": "^1.15.4"
   },
   "devDependencies": {
