--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,16 +29,13 @@ services:
       - '5432:5432'
     networks:
       - db
-      - exterior
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
+  adminer:
+    image: adminer:standalone
     depends_on:
       - database
     ports:
-      - "8888:80"
-    environment:
-      - PMA_ARBITRARY=1
+      - 8080:8080
     networks:
       - db
       - exterior
