--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^9.0.1",
     "http": "0.0.1-security",
     "https": "^1.0.0",
+    "jimp": "^0.16.1",
     "nodemailer": "^6.5.0",
     "path": "^0.12.7",
     "pg": "^8.5.1",
